--- a/ChordPlayer/app/build.gradle
+++ b/ChordPlayer/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.github.billthefarmer:mididriver:v1.18'
+    implementation 'com.github.LeffelMania:android-midi-lib:master-SNAPSHOT'
 }
