--- a/ChordPlayer/app/build.gradle
+++ b/ChordPlayer/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.chordplayer"
+        applicationId "com.pudkipz.chordplayer"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
